main/static/css/main.css
.gradient-custom-2 {
  /* fallback for old browsers */
  background: #e6e6e6;

  /* Chrome 10-25, Safari 5.1-6 */
  background: -webkit-linear-gradient(
    to right,
    #e9cf25,
    #dda90e,
    #be7521,
    #995507
  );

  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  background: linear-gradient(to right, #e9cf25, #dda90e, #be7521, #995507);

  border-top-right-radius: 0.3rem;

  border-bottom-right-radius: 0.3rem;
}

@media (min-width: 768px) {
  .gradient-form {
    height: 100vh !important;
  }
}
@media (min-width: 769px) {
  .gradient-custom-2 {
    border-top-right-radius: 0.3rem;
    border-bottom-right-radius: 0.3rem;
  }
}

